commit modal changes

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	<div id="overlay">
 		<div id="modal">
 			<h2>Contact Details</h2>
-			<p>Homer Simpson, 742 Evergreen Terrace (no spam please!) 😀</p>
+			<p>Homer Simpson, 742 Evergreen Terrace (no spam please!)<img src="homer.gif" alt="a gif of homer simpson"></p>
 			<button id="close-modal">Close! 👋</button>
 		</div>
-		<h1>👇 Click to reveal Homer's contact details! 👇</h1>
-		<button id="open-modal">Contact me 📨</button>
 	</div>
+	<h1>👇 Click to reveal Homer's contact details! 👇</h1>
+		<button id="open-modal">Contact me 📨</button>
 	<script src="index.js"></script>
 </body>
 </html>
